--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,27 +1,119 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--최상위 레이아웃. DrawerLayout-->
-<androidx.drawerlayout.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?><!--최상위 레이아웃. DrawerLayout-->
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true"
+    tools:openDrawer="end">
 
-    <!--메인 레이아웃-->
-    <include
+    <!--메인 레이아웃(툴바, 메뉴바, 콘텐츠) -->
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        layout="@layout/activity_main_layout" />
+        android:orientation="vertical">
+
+        <!-- 툴바 -->
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/main_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/transparent" />
+
+        <!-- 여행기록하기 메뉴바 -->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_home_trip_record"
+            android:elevation="30dp">
+
+            <TextView
+                android:id="@+id/main_user_name_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="OOO님의 추억"
+                android:textColor="@color/black"
+                android:textSize="12sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/main_user_trip_count_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/notosans_kr_bold"
+                android:text="15"
+                android:textColor="@color/tripbook_main_color1"
+                android:textSize="22sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:fontFamily="@font/notosans_kr_medium"
+                android:text="개"
+                android:textColor="@color/black"
+                android:textSize="12sp"
+                app:layout_constraintBottom_toBottomOf="@id/main_user_trip_count_tv"
+                app:layout_constraintStart_toEndOf="@id/main_user_trip_count_tv"
+                app:layout_constraintTop_toTopOf="@id/main_user_trip_count_tv" />
+
+            <TextView
+                android:id="@+id/main_content_record_btn_tv"
+                android:layout_width="151dp"
+                android:layout_height="32dp"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/bg_green_btn"
+                android:text="+ 여행 기록하러 가기"
+                android:textColor="@color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <!-- 여행 콘텐츠 스와이프 -->
+        <FrameLayout
+            android:id="@+id/main_content_fl"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/main_content_vp"
+                android:layout_gravity="center"
+                android:clipToPadding="false"
+                android:clipChildren="false"
+                android:scaleType="fitXY"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+            <me.relex.circleindicator.CircleIndicator3
+                android:id="@+id/main_content_ci"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_gravity="bottom"/>
+        </FrameLayout>
+
+    </LinearLayout>
 
     <!--자식 레이아웃. Navigation Drawer-->
     <com.google.android.material.navigation.NavigationView
-        android:id="@+id/main_navigationView"
+        android:id="@+id/main_left_navigation_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="left"
-        app:headerLayout="@layout/activity_main_drawer_header"
-        app:menu="@menu/activity_main_drawer_navigation">
-    </com.google.android.material.navigation.NavigationView>
+        android:layout_gravity="start"
+        app:headerLayout="@layout/activity_main_left_drawer_header"
+        app:menu="@menu/activity_main_left_drawer" />
+
+    <!--자식 레이아웃. Navigation Drawer-->
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/main_right_navigation_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="end"
+        app:headerLayout="@layout/activity_main_right_drawer_header"
+        app:menu="@menu/activity_main_right_drawer" />
 </androidx.drawerlayout.widget.DrawerLayout>
