--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,7 +17,7 @@
         <item name="android:windowTranslucentStatus">true</item>
         <item name="android:windowTranslucentNavigation">true</item>
 
-        //상태바까지 view를 보여주도록록
-       <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+        //상태바까지 view를 보여주도록
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
     </style>
 </resources>
