--- a/app/src/main/res/drawable-v23/drawable_top_image_camera.xml
+++ b/app/src/main/res/drawable-v23/drawable_top_image_camera.xml
@@ -2,7 +2,8 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:drawable="@drawable/img_tripcourserecord_camera"
-        android:width="64dp"
-        android:height="63dp"
-        />
+        android:width="72dp"
+        android:height="72dp"
+        >
+    </item>
 </layer-list>
