--- a/app/src/main/res/drawable/drawable_custom_background_white.xml
+++ b/app/src/main/res/drawable/drawable_custom_background_white.xml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle"
+    >
 
+    <solid android:color="@color/transparent"/>
+    <stroke
+        android:width="1dp"
+        android:color="@color/gray"
+        />
+
+    <corners android:radius="10dp"/>
 </shape>
