--- a/app/src/main/res/drawable/bg_trip_greybackground.xml
+++ b/app/src/main/res/drawable/bg_trip_greybackground.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/tripbook_main_color1"/>
+    <solid android:color="@color/grey"/>
     <corners
         android:radius="10dp"/>
     <padding
-        android:top="5dp"
-        android:left="10dp"
-        android:right="10dp"
-        android:bottom="5dp"/>
+        android:top="10dp"
+        android:left="180dp"
+        android:right="180dp"
+        android:bottom="10dp"/>
 </shape>
