--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/notosans_kr_bold"
                 android:text="15"
-                android:textColor="@color/tripbook_main_color1"
+                android:textColor="@color/tripbook_main_1"
                 android:textSize="22sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
@@ -66,7 +66,7 @@
                 android:layout_width="151dp"
                 android:layout_height="32dp"
                 android:layout_marginBottom="20dp"
-                android:background="@drawable/bg_green_btn"
+                android:background="@drawable/bg_main_greenbtn"
                 android:text="+ 여행 기록하러 가기"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
