--- a/app/src/main/res/layout/activity_main_right_drawer_header.xml
+++ b/app/src/main/res/layout/activity_main_right_drawer_header.xml
@@ -10,7 +10,7 @@
         android:id="@+id/main_right_drawer_close_iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_close"
+        android:src="@drawable/btn_home_close"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -18,7 +18,7 @@
         android:id="@+id/main_right_drawer_ic_iv"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:src="@drawable/ic_hashtag"
+        android:src="@drawable/btn_home_hashtag"
         android:layout_marginTop="60dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,7 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:background="@drawable/bg_search"
+        android:background="@drawable/bg_main_searchtab"
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@id/main_right_drawer_comment_tv"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,7 +49,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_search"
+            android:src="@drawable/img_home_search"
             android:layout_gravity="center"
             android:layout_marginEnd="15dp"/>
         <EditText
