--- a/app/src/main/res/drawable/drawable_custom_background_white.xml
+++ b/app/src/main/res/drawable/drawable_custom_background_white.xml
@@ -1,14 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle"
     >
 
-    <solid android:color="@color/transparent"/>
+    <solid
+        android:color="@color/transparent"
+        />
+
+    <padding
+        android:left="0dp"
+        android:top="0dp"
+        android:right="0dp"
+        android:bottom="0dp"
+        />
 
     <stroke
         android:width="1dp"
-        android:color="@color/gray"
+        android:color="@color/tripbook_sub_2"
         />
 
-    <corners android:radius="10dp"/>
+    <corners
+        android:radius="10dp"
+        />
+
 </shape>
