--- a/app/src/main/res/layout/activity_tripcourse.xml
+++ b/app/src/main/res/layout/activity_tripcourse.xml
@@ -38,7 +38,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="40dp"
-                        android:layout_gravity="right"/>
+                        android:layout_gravity="right"
+                        tools:ignore="RtlHardcoded" />
+
                     <ImageView
                         android:src="@drawable/img_chain_basic"
                         android:layout_width="wrap_content"
@@ -57,15 +59,48 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <!--메인 앨범-->
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/looker_albumlist_recyclerview"
+<!--            <androidx.recyclerview.widget.RecyclerView-->
+<!--                android:id="@+id/looker_albumlist_recyclerview"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:orientation="vertical"-->
+<!--                android:padding="15dp"-->
+<!--                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
+<!--                tools:listitem="@layout/item_tripcourse_album_right"-->
+<!--                />-->
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="15dp"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                tools:listitem="@layout/item_tripcourse_album_right"
-                />
+                android:padding="20dp">
+
+                <include
+                    layout="@layout/item_tripcourse_album_right"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:layout_gravity="start"
+                    />
+                <include
+                    layout="@layout/item_tripcourse_album_left_top"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:layout_gravity="end"
+                    />
+
+                <include
+                    layout="@layout/item_tripcourse_album_right_top"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start" />
+
+                <include
+                    layout="@layout/item_tripcourse_album_top"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:layout_gravity="end"
+                    />
+            </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
