--- a/app/src/main/res/layout/item_tripcourse_album_left_top.xml
+++ b/app/src/main/res/layout/item_tripcourse_album_left_top.xml
@@ -1,33 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="173dp"
-        android:layout_height="235dp"
-        android:paddingTop="23dp"
-        android:paddingEnd="20dp"
-        android:background="@drawable/img_tripcourse_albumcard_right"
+        android:layout_height="258dp"
+        android:paddingTop="28dp"
+        android:paddingStart="4dp"
+        android:background="@drawable/img_tripcourse_albumcard_left_top"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="RtlSymmetry">
 
+        <ImageView
+            android:layout_width="18dp"
+            android:layout_height="18dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="12dp"
+            android:src="@drawable/img_x_basic"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <FrameLayout
             android:id="@+id/tripcourse_album_cover_layout"
-            android:layout_width="124dp"
-            android:layout_height="135dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="18dp"
+            android:layout_marginTop="24dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
                 <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="124dp"
+                    android:layout_height="135dp"
                     android:backgroundTint="@color/gray"
                     app:cardCornerRadius="10dp"/>
             </LinearLayout>
@@ -36,7 +47,7 @@
                 android:src="@drawable/img_tripcourse_addpicture_plus"
                 android:layout_width="33dp"
                 android:layout_height="33dp"
-                android:layout_gravity="center" />
+                android:layout_gravity="center"/>
         </FrameLayout>
 
         <View
@@ -61,6 +72,8 @@
             app:layout_constraintEnd_toEndOf="@id/tripcourse_album_cover_layout"
             app:layout_constraintStart_toStartOf="@id/tripcourse_album_cover_layout" />
 
+
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
