--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,8 +15,8 @@
     <color name="tripbook_main_3">#80007C32</color>
     <color name="tripbook_sub">#80FFB800</color>
 
-    <color name="search">#80BE99</color>
-    <color name="calender">#B3D8C2</color>
-    <color name="others">#4DA470</color>
+    <color name="tripbook_sub_1">#80BE99</color>
+    <color name="tripbook_sub_2">#B3D8C2</color>
+    <color name="tripbook_sub_3">#4DA470</color>
 
 </resources>
