images update, finish tripcourse xml

--- a/app/src/main/res/layout/activity_tripcourse.xml
+++ b/app/src/main/res/layout/activity_tripcourse.xml
@@ -23,11 +23,10 @@
             <!--타이틀 바-->
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingTop="12dp">
+                android:layout_height="wrap_content">
                 <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="92dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -35,17 +34,43 @@
 
                     <ImageView
                         android:src="@drawable/img_titlebar_basic"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="40dp"
-                        android:layout_gravity="right"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="centerInside"
+                        android:layout_gravity="center"
                         tools:ignore="RtlHardcoded" />
 
-                    <ImageView
-                        android:src="@drawable/img_chain_basic"
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"/>
+                        android:orientation="vertical"
+                        android:layout_marginEnd="60dp"
+                        android:layout_gravity="right|center_vertical"
+                        android:gravity="end">
+                        <TextView
+                            android:id="@+id/tripcourse_title_period_tv"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="2dp"
+                            android:text="여행 기간"
+                            android:textSize="11sp"
+                            android:textColor="@color/black"
+                            android:fontFamily="@font/notosans_kr_regular"
+                            android:includeFontPadding="false"
+                            />
+                        <TextView
+                            android:id="@+id/tripcourse_title_tv"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="여행 기간"
+                            android:textSize="20sp"
+                            android:textColor="@color/black"
+                            android:fontFamily="@font/notosans_kr_bold"
+                            android:includeFontPadding="false"
+                            />
+
+                    </LinearLayout>
+
                 </FrameLayout>
 
                 <View
