--- a/app/src/main/res/layout/activity_tripcourse_select_hashtag.xml
+++ b/app/src/main/res/layout/activity_tripcourse_select_hashtag.xml
@@ -7,31 +7,32 @@
 
     <include
         layout="@layout/layout_topbar_base"
+        android:id="@+id/tripcourse_select_hashtag_topbar_layout"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:id="@+id/tripcourse_select_hashtag_topbar_layout"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/tripcourse_select_hashtag_topbar_layout">
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/tripcourse_select_hashtag_topbar_layout"
+        app:layout_constraintBottom_toTopOf="@id/tripcourse_select_hashtag_select_complete_layout">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             >
 
             <!--설명 창-->
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/tripcourse_select_hashtag_explain_layout"
                 android:layout_width="match_parent"
                 android:layout_height="94dp"
                 android:gravity="center"
                 android:orientation="vertical"
-                app:layout_constraintTop_toBottomOf="@id/tripcourse_select_country_topbar_layout"
+                app:layout_constraintTop_toTopOf="parent"
                 >
 
                 <LinearLayout
@@ -53,11 +54,12 @@
                         android:gravity="center"
                         android:paddingVertical="3dp"
                         android:text="@string/tripcourse_select_hashtag_explain1"
-                        android:textSize="10sp"
+                        android:textSize="9sp"
                         android:textColor="@color/black"
                         android:textColorHint="@color/black"
                         android:fontFamily="@font/notosans_kr_regular"
                         android:includeFontPadding="false"
+                        tools:ignore="SmallSp"
                         />
                     <TextView
                         android:layout_width="wrap_content"
@@ -65,11 +67,12 @@
                         android:gravity="center"
                         android:paddingVertical="3dp"
                         android:text="@string/tripcourse_select_hashtag_explain2"
-                        android:textSize="10sp"
+                        android:textSize="9sp"
                         android:textColor="@color/black"
                         android:textColorHint="@color/black"
                         android:fontFamily="@font/notosans_kr_regular"
                         android:includeFontPadding="false"
+                        tools:ignore="SmallSp"
                         />
                     <TextView
                         android:layout_width="wrap_content"
@@ -77,11 +80,12 @@
                         android:gravity="center"
                         android:paddingVertical="3dp"
                         android:text="@string/tripcourse_select_hashtag_explain3"
-                        android:textSize="10sp"
+                        android:textSize="9sp"
                         android:textColor="@color/black"
                         android:textColorHint="@color/black"
                         android:fontFamily="@font/notosans_kr_regular"
                         android:includeFontPadding="false"
+                        tools:ignore="SmallSp"
                         />
                 </LinearLayout>
 
@@ -97,16 +101,18 @@
             <!--해시태그 선택 창-->
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/tripcourse_select_hashtag_explain_layout">
 
             </androidx.recyclerview.widget.RecyclerView>
 
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
 
-    <!--선택 완료 버튼-->
+    <!--선택 완료 바-->
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/tripcourse_select_hashtag_select_complete_layout"
         android:layout_width="match_parent"
         android:layout_height="85dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -119,7 +125,9 @@
             android:layout_marginHorizontal="10dp"
             app:layout_constraintTop_toTopOf="parent"/>
 
+        <!--선택 완료 버튼-->
         <Button
+            android:id="@+id/tripcourse_select_hashtag_select_complete_btn"
             android:layout_width="228dp"
             android:layout_height="43dp"
             android:background="@drawable/drawable_custom_button_base"
