--- a/app/src/main/res/layout/dialog_base.xml
+++ b/app/src/main/res/layout/dialog_base.xml
@@ -4,62 +4,78 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_gravity="center">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="280dp"
-        android:layout_height="170dp"
+        android:layout_width="330dp"
+        android:layout_height="190dp"
         android:background="@drawable/bg_dialog_base"
+        android:paddingVertical="15dp"
+        android:paddingHorizontal="20dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <TextView
             android:id="@+id/dialog_base_title_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16sp"
-            android:textColor="@color/tripbook_main_color1"
-            android:paddingStart="15dp"
-            android:paddingEnd="15dp"
-            android:gravity="center"
+            android:textColor="@color/black"
+            android:fontFamily="@font/notosans_kr_bold"
+            android:includeFontPadding="false"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/dialog_base2_btn_cl"
             tools:text="Title"/>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/dialog_base2_btn_cl"
+        <View
+            android:id="@+id/dialog_base_view"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="10dp"
+            android:background="@color/gray"
+            app:layout_constraintTop_toBottomOf="@id/dialog_base_title_tv"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <TextView
+            android:id="@+id/dialog_base_message_tv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent">
+            android:textColor="@color/black"
+            android:fontFamily="@font/notosans_kr_regular"
+            android:includeFontPadding="false"
+            android:gravity="center"
+            app:layout_constraintTop_toBottomOf="@id/dialog_base_view"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/dialog_base_ok_btn_tv"
+            tools:text="메세지 내용을 입력주세요."/>
 
-            <TextView
-                android:id="@+id/dialog_base_check_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:text="@string/dialog_base_check"
-                android:textColor="@color/tripbook_main_color1"
-                android:gravity="center"
-                android:background="@drawable/bg_dialog_base_btn_border"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/dialog_base_cancel_tv"
-                tools:ignore="MissingConstraints" />
+        <TextView
+            android:id="@+id/dialog_base_ok_btn_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:fontFamily="@font/notosans_kr_bold"
+            android:gravity="center"
+            android:background="@drawable/bg_main_greenbtn"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            tools:text="확인"/>
 
-            <TextView
-                android:id="@+id/dialog_base_cancel_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:text="@string/dialog_base_cancel"
-                android:textColor="@color/tripbook_main_color1"
-                android:gravity="center"
-                android:background="@drawable/bg_dialog_base_btn_border"
-                app:layout_constraintStart_toEndOf="@id/dialog_base_check_tv"
-                app:layout_constraintEnd_toEndOf="parent"
-                tools:ignore="MissingConstraints" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/dialog_base_close_btn_iv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/btn_home_close"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+   </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
