--- a/app/src/main/res/drawable/bg_base_main_1_empty.xml
+++ b/app/src/main/res/drawable/bg_base_main_1_empty.xml
@@ -17,7 +17,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/tripbook_sub_2"
+        android:color="@color/tripbook_main_4"
         />
 
     <corners
