--- a/app/src/main/res/drawable/bg_home_trip_record.xml
+++ b/app/src/main/res/drawable/bg_home_trip_record.xml
@@ -4,7 +4,7 @@
     <item>
         <shape
             android:shape="rectangle">
-            <solid android:color="@color/search"/>
+            <solid android:color="@color/tripbook_main_4"/>
             <corners
                 android:bottomLeftRadius="20dp"
                 android:bottomRightRadius="20dp"/>
