--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,8 +10,7 @@
     <color name="gray">#DFDFDF</color>
     <color name="transparent">#00000000</color>
 
-    <color name="tripbook_sub">#80FFB800</color>
-
+<!--사용 취소    <color name="tripbook_sub">#80FFB800</color>-->
 
     <color name="tripbook_main_1">#007C32</color>
     <color name="tripbook_main_2">#4DA470</color>
